# Operating-System

./: README.md
HW1/: OS 2021 Problem Sheet #1.docx  env  env.c
HW10/: CMakeLists.txt  README.md
HW10/gwgd/: CMakeLists.txt  clnt-event.c  clnt.c  clnt.h  gwgd.c
HW10/lib/: CMakeLists.txt  tcp-listen.c  tcp-read.c
HW11/: CMakeLists.txt  OS 2021 Problem Sheet #11.docx  catloop.c
HW12/: OS 2021 Problem Sheet #12.docx
HW2/: OS 2021 Problem Sheet #2.docx  xargs.c
HW3/: OS 2021 Problem Sheet #3.docx  fork  fork.c
HW4/: prisoners.c
HW5/: OS 2021 Problem Sheet #5.docx
HW6/: OS 2021 Problem Sheet #6.docx  a.c  b.c  main.c  play
HW7/: OS 2021 Problem Sheet #7.docx
HW9/: CMakeLists.txt
HW9/gwg/: CMakeLists.txt  gwg.c
HW9/gwgd/: CMakeLists.txt  chlng.c  gwgd.c  init-methods.c  run.c
HW9/lib/: tcp-connect.c
Listings/: 1.c  2.c  3.c  4.c  h2o.c
Quizzes/: Q1.docx  Q10.docx  Q2.docx  Q3.docx  Q4.docx  Q5.docx  Q6.docx
Sockets/: CMakeLists.txt
Sockets/chat/: CMakeLists.txt  chat.c
Sockets/chatd/: CMakeLists.txt  chatd.c
Sockets/lib/: CMakeLists.txt
